<?xml version="1.0" encoding="utf-8"?>

<!--Programmer Name: Liew Chen Tzer-->
<!--Program Name: activity_set_emergency_line.xml-->
<!--Description: Set Emergency Line design-->
<!--First Written on: Tuesday, 1-Feb-2022-->
<!--Edited on: Thursday, 7-April-2022-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SetEmergencyLine">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="52dp"
        android:layout_marginTop="152dp"
        android:text="@string/set_emergency_line"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SetEmergencyLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:hint="@string/enter_emergency_line"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#898d8d"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/SELSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#444444"
        android:text="@string/save"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetEmergencyLine" />

</androidx.constraintlayout.widget.ConstraintLayout>